<resources>
    <string name="app_name">Controle Elevador</string>

    <!-- Strings login -->
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="new_password">Nova senha</string>
    <string name="enter">Entrar</string>
    <string name="reset_password">Recuperar Senha</string>
    <string name="reset_bt_label">Iniciar recuperação acesso</string>
    <string name="reset">Recuperar acesso</string>
    <string name="notifications">Notificações</string>
    <string name="report_ls_ld">Limite de Subida e Descida </string>
    <string name="report_frequency">Frequência de Uso</string>

    <!-- Strings Register -->
    <string name="floors_allowed">Andares permitidos</string>
    <string name="floor_nfc">Andar de destino quando usar NFC</string>
    <string name="floors_one">1º Andar</string>
    <string name="floors_two">2º Andar</string>
    <string name="floors_three">3º Andar</string>

    <!-- Strings Main Activity -->
    <string name="register_user">Cadastrar usuário</string>
    <string name="edit_user">Editar Usuário</string>
    <string name="delete_user">Excluir Usuário</string>
    <string name="exit">Sair</string>
    <string name="call_elevator">Chamar Elevador</string>
    <string name="wait">Aguarde...</string>

    <!-- Strings Networks Activity -->
    <string name="network1">Dados de Acesso Rede 1</string>
    <string name="network2">Dados de Acesso Rede 2</string>
    <string name="network3">Dados de Acesso Rede 3</string>
    <string name="manage_networks">Gerenciar Redes</string>
    <string name="edit_networks">Editar Redes</string>
    <string name="save_register">Salvar Cadastro</string>
    <string name="msg_register_networks">Cadastro de redes salvo com sucesso!</string>

    <string name="record_nfc">Gravar NFC</string>
    <string name="tutorial_record_nfc"> Posicione um cartão NFC atrás do celular para que seja realizada a leitura.</string>
    <string name="save_nfc">Salvar NFC</string>
    <string name="save_nfc_success">Id do NFC salvo com sucesso!</string>
    <string name="save_nfc_error">É necessário ler um cartão NFC antes de salvar!</string>
    <string name="msg_floor_nfc">Usando o NFC você irá do térreo para %1$s° andar </string>

    <!-- Strings Permissoes -->
    <string name="permissions.required_permission_internet">Por favor, conceda a permissão de internet para utilizar o aplicativo</string>
    <string name="permissions.required_permissions">A permissão de gravar a imagem no seu celular é necessária para a utilização deste aplicativo</string>
    <string name="permissions.go_to_settings">Vá para configurações e habilite as permissões necessárias</string>

    <!-- Strings Call Elevator -->
    <string name="origin">Você está no: </string>
    <string name="destination">Deseja ir para:</string>

    <!-- Strings Titulo das telas -->
    <string name="manager_elevator">Gestão do elevador </string>
    <string name="login">Login </string>

    <!-- Strings report_frequency -->
    <string name="route">Rota </string>
    <string name="user">Usuário</string>
    <string name="date">Data </string>
    <string name="hour">Hora</string>
    <string name="first_use">Primeiro uso: </string>
    <string name="last_use">Último uso: </string>
    <string name="quantity_call">Quantidade de chamadas: </string>

    <!-- Strings report_notify -->
    <string name="notify">Notificação </string>
    <string name="dateHour">Data e Hora</string>
    <string name="msg_error_ld">O elevador ultrapassou o limite de descida, por favor utilize a escada!</string>
    <string name="msg_error_ls">O elevador ultrapassou o limite de subida, por favor utilize a escada!</string>
    <string name="attention">Atenção! </string>
    <string name="error_ld">O elevador ultrapassou o limite de descida.</string>
    <string name="error_ls">O elevador ultrapassou o limite de subida.</string>

    <!-- Strings messages -->
    <string name="msg_elevator"> O elevador está a caminho.</string>
    <string name="msg_equal_floor"> Selecione andares diferentes, antes de chamar o elevador.</string>
    <string name="msg_elevator_wait"> Aguarde... O elevador já está a caminho.</string>
    <string name="error_mail_password"> Cadastre um e-mail válido e uma senha com no mínimo 6 caracteres.</string>
    <string name="filter_for_floor"> Filtros por rota(andar):</string>
    <string name="all">todos</string>

    <!-- Strings NFC -->
    <string name="intro_message">This is a simple app to read various tags (NDEF, RFID, FeliCa, ISO 14443, etc).\n\nYou use it by holding a tag/card against the back of your device.\n\nPlease let me know if you want me to change how the data is displayed. Also send me an e-mail (adam@anyro.se) if you have any problems with the app and I\'ll let you know when I\'ve fixed it. You can also see the source code and report issues at https://github.com/nadam/nfc-reader.\n\nIf you can\'t read any tag, please try some of the other NFC apps on Google Play and let me know if this app is the only one not working. Thanks!\n\n/Adam</string>
    <string name="error">Error</string>
    <string name="no_nfc">O seu smartphone não conta com o dispositivo NFC</string>
    <string name="nfc_disabled">O NFC está desabilitado. Por favor, ative a funcionalidade nos configurações de rede do seu smartphone.</string>
    <string name="menu_main_clear_title">Clear all</string>
    <string name="menu_main_copy">Copy IDs</string>
    <string name="menu_copy_hex">Hex</string>
    <string name="menu_copy_reversed_hex">Reversed hex</string>
    <string name="menu_copy_dec">Dec</string>
    <string name="menu_copy_reversed_dec">Reversed dec</string>
    <string name="nothing_scanned">Nothing scanned yet</string>
</resources>
