<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    tools:context="com.br.uellisson.controleelevador.view.MainActivityAdmin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/button3"
            android:onClick="callElevator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_elevator" />

        <Button
            android:id="@+id/bt_register_user"
            android:onClick="registerUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_user" />

        <Button
            android:id="@+id/bt_edit_user"
            android:onClick="editUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_user" />

        <Button
            android:id="@+id/bt_delete_user"
            android:onClick="deleteUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_user" />

        <Button
            android:id="@+id/bt_exit"
            android:onClick="exitApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
    </LinearLayout>

</RelativeLayout>
