<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.tcc.controleelevador.view.UserActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- progress -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_register" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/min_margin"
                android:text="@string/name"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spn_users"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:drawable/btn_dropdown" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/min_margin"
                android:text="@string/email"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/min_margin"
                android:text="@string/password"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/min_margin"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:text="@string/floors_allowed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floors_one" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/min_margin"
                    android:text="@string/floors_two" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/min_margin"
                    android:text="@string/floors_three"
                    android:visibility="gone"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewNfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/min_margin"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:text="@string/floor_nfc" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton1Nfc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floors_one"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radioButton2Nfc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/min_margin"
                    android:text="@string/floors_two" />
            </RadioGroup>

            <Button
                android:id="@+id/bt_register_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:onClick="sendSignUpData"
                android:text="@string/register_user" />

            <!--<android.support.v7.widget.RecyclerView
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/rv_users"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>-->
        </LinearLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/sign_up_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</RelativeLayout>
