<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.br.uellisson.controleelevador.view.ReportFrequencyActivity">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_weight="4"
            android:text="@string/route"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_weight="2.5"
            android:text="@string/user"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_below="@+id/tv_user"
            android:layout_marginLeft="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_weight="3.5"
            android:text="@string/date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_date"
            android:layout_marginLeft="@dimen/min_margin"
            android:layout_marginRight="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_weight="4"
            android:text="@string/hour"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_frequency"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/layout_header"
        android:layout_marginLeft="@dimen/min_margin"
        android:layout_marginRight="@dimen/min_margin"></android.support.v7.widget.RecyclerView>

</RelativeLayout>
